# sometime

./: Cargo.toml  README.md  justfile
sometime/: Cargo.toml
sometime-calendar/: Cargo.toml
sometime-calendar/src/: calendar.rs  canvas.rs  main.rs
sometime-clock/: Cargo.toml
sometime-clock/src/: canvas.rs  clock.rs  main.rs
sometime-core/: Cargo.toml
sometime-core/src/: app.rs  canvas_primitives.rs  lib.rs  registry.rs  theme.rs  widget.rs
sometime/src/: app.rs  registry.rs  widget.rs
src/: canvas.rs  command.rs  flock.rs  geometry.rs  ipc.rs  lib.rs  lifecycle.rs  main.rs  registry.rs  sometime.rs  theme.rs  wayland.rs  widget.rs
