[package]
name = "sometime-calendar"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sometime-calendar"
path = "src/main.rs"

[dependencies]
sometime-core = { path = "../sometime-core" }
chrono = { workspace = true }
cosmic-text = "0.15.0"
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
