[package]
name = "sometime-calendar"
version = "25.12.28"
edition = "2024"

[[bin]]
name = "sometime-calendar"
path = "src/main.rs"

[dependencies]
sometime = { path = "../sometime" }
chrono = { workspace = true }
cosmic-text = "0.16.0"
smithay-client-toolkit = { workspace = true }
wayland-client = { workspace = true }
